[gd_scene load_steps=3 format=3 uid="uid://df1kk6okomxoo"]

[ext_resource type="PackedScene" uid="uid://do4gtca4bjigf" path="res://utils/receiver.tscn" id="1_8aowu"]
[ext_resource type="Script" path="res://scenes/enemy/hurt_receiver.gd" id="2_fetbr"]

[node name="HurtReceiver" instance=ExtResource("1_8aowu")]
script = ExtResource("2_fetbr")

[node name="HurtTimer" type="Timer" parent="." index="0"]
wait_time = 3.0
one_shot = true

[connection signal="received_entered" from="." to="." method="_on_hurt_receiver_received"]
[connection signal="received_exited" from="." to="." method="_on_hurt_receiver_received_exited"]
[connection signal="timeout" from="HurtTimer" to="." method="_on_hurt_timer_timeout"]
